--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       .hero {
         height: 100vh;
         background: linear-gradient(var(--overlay), var(--overlay)),
-          url("https://images.unsplash.com/photo-1527838832700-5059252407fa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1748&q=80");
+          url("hero.png");
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
